--- a/agents-starter/wrangler.jsonc
+++ b/agents-starter/wrangler.jsonc
@@ -6,11 +6,10 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "agents-starter",
   "main": "src/server.ts",
-  "compatibility_date": "2025-08-03",
+  "compatibility_date": "2024-09-26",
   "compatibility_flags": ["nodejs_compat"],
   "ai": {
-    "binding": "AI",
-    "remote": true
+    "binding": "AI"
   },
   "assets": {
     "directory": "public"
