--- a/agents-starter/package.json
+++ b/agents-starter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloudflare-agent-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "edgeComposer application bundle",
   "type": "module",
   "private": true,
   "scripts": {
@@ -25,7 +25,6 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@cloudflare/vite-plugin": "1.13.2",
     "@cloudflare/vitest-pool-workers": "^0.9.2",
     "@cloudflare/workers-types": "^4.20250917.0",
     "@tailwindcss/vite": "^4.1.13",
@@ -42,10 +41,7 @@
     "wrangler": "^4.38.0"
   },
   "dependencies": {
-    "@ai-sdk/react": "^2.0.44",
-    "@ai-sdk/ui-utils": "^1.2.11",
     "@phosphor-icons/react": "^2.1.10",
-    "@radix-ui/react-slot": "^1.2.3",
     "agents": "^0.1.6",
     "ai": "^5.0.44",
     "clsx": "^2.1.1",
